@startuml
'https://plantuml.com/class-diagram

title "US 5.1.9 - Domain Model"

package "<<aggregate>> Patient" {
    entity Patient <<entity>> <<root>> {}
    class DateBirth <<(V,#FF8B40)value object>> {}
    class Gender <<(V,#FF8B40)value object>> {}
    class EmergencyContact <<(V,#FF8B40)value object>> {}
    class MRN <<(V,#FF8B40)value object>> <<identifier>> {}
    class MedicalCondition <<(V,#FF8B40)value object>> {}
    class AppointmentHistory <<(V,#FF8B40)value object>> {}
    class Name <<(V,#FF8B40)value object>> {}
    class FirstName <<(V,#FF8B40)value object>> {}
    class LastName <<(V,#FF8B40)value object>> {}
    class FullName <<(V,#FF8B40)value object>> {}
    class ContactInfo <<(V,#FF8B40)value object>> {}
    class Phone <<(V,#FF8B40)value object>> {}
    class Email <<(V,#FF8B40)value object>> {}
}


Name --> FirstName
Name -> LastName
Name --> FullName

Patient -> "1" Name
Patient --> "1" DateBirth
Patient --> "1" Gender
Patient ---> "1" ContactInfo
Patient ---> "1" EmergencyContact
Patient --> "1" MRN
Patient --> "0..1" MedicalCondition
Patient --> "1" AppointmentHistory

ContactInfo --> "1" Email
ContactInfo --> "1" Phone

EmergencyContact --> "1" Phone

@enduml